--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anime Stream</title>
+    <title>AnimeStream</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,6 +27,24 @@
                 <button id="subtitles">Subtitles</button>
                 <button id="fullscreen">⛶ Fullscreen</button>
                 <button id="skip">⏩ 10s</button>
+            </div>
+        </div>
+
+        <div class="anime-thumbnails">
+            <h2>Popular Anime</h2>
+            <div class="anime-list">
+                <div class="anime-item">
+                    <img src="naruto.jpg" alt="Naruto">
+                    <p>Naruto</p>
+                </div>
+                <div class="anime-item">
+                    <img src="onepiece.jpg" alt="One Piece">
+                    <p>One Piece</p>
+                </div>
+                <div class="anime-item">
+                    <img src="aot.jpg" alt="Attack on Titan">
+                    <p>Attack on Titan</p>
+                </div>
             </div>
         </div>
     </main>
